public/vi.less
/* ... */
.vi_operator .search.expanded input {margin: 10px 15px;}

.vi_operator .search.collapsed:hover,
.vi_operator .compoundfilter.collapsed:hover {background-color:#e2e2e2; box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.5);}

.vi_operator .search.expanded,
.vi_operator .compoundfilter.expanded {
box-shadow: inset 1px 1px 2px rgba(0, 0, 0, 0.3);
background-color:#d6d6d6;
}

.vi_operator .compoundfilter.expanded .extendedfilter {
    margin-top:15px;
}

.vi_operator .compoundfilter.embed {
    width: 98%;
    margin: 0 0 20px;
    background: #eee;
    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
}
.vi_operator .tree .search h2 {
  width: 60px;
  float: left;
  text-align: center;
  padding: 4px 10px 6px;
  height: 16px;
  border: 1px solid#bbb;
  border-right-width: 0;
  background: #e3e3e3;
  color: #777;
  overflow: hidden;
  line-height: 1.4em;
  font-size: 0.8em;
  margin-left: 7px;
}
/*.vi_operator:nth-child(n+1):before {
    content:" ";
    margin-left:0px;
    margin-top:50%;
    float:left;
    border-style: solid;
    border-width: 24px 30px;
    border-color: rgba(255, 255, 255, 0) rgba(255, 255, 255, 0) rgba(255, 255, 255, 0) #f6f6f6;
  }*/
/* #actionbar
================================================== */
.vi_operator .actionbar {
  width: 97%;
  /*min-width: 500px;*/
  position: fixed; /* Issue VI-20 */
  margin-top: -105px;
  margin-left: -1%;
  padding: 15px 1%;
  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.2);
  border: 1px solid #ccc;
  border-bottom: 1px solid #bbb;
  background-color: #eee;
  background-color: rgba(210, 210, 210, 0.9);
  background-image: -webkit-gradient(linear, right top, right bottom, from(rgba(238, 238, 238, 0.9)), to(rgba(255, 255, 255, 0.2)));
  background-image: -moz-linear-gradient(top center, rgba(238, 238, 238, 0.8) 20%, rgba(255, 255, 255, 0.2) 95%);
  z-index: 100;
}
.vi_operator .actionbar h3:before {
  content: '';
  margin-top: -4px;
  margin-left: -10px;
  margin-right: 10px;
  border-right: 1px solid #ccc;
  width: 16px;
  height: 16px;
  float: left;
  padding: 5px 6px 5px 4px;
  background-image: url(icons/vi_actions_view_sprite.svg);
  background-repeat: no-repeat;
}
.vi_operator .actionbar h3.action_list:before {
  background-position: 0px 0px;
}
.vi_operator .actionbar h3.action_add:before {
  background-position: -24px 0px;
}
.vi_operator .actionbar h3.action_edit:before {
  background-position: -48px 0px;
}
.vi_operator .actionbar h3.action_Text:before {
  background-position: -72px 0px;
}
.vi_operator .actionbar h3 {
  line-height: 1em;
  color: #222;
  height: 16px;
  padding: 4px 15px 6px 10px;
  text-align: center;
  background-color: #ddd;
  background: -moz-linear-gradient(top, #ffffff 0%, #dddddd 100%);
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ffffff), color-stop(100%, #dddddd));
  background: -webkit-linear-gradient(top, #ffffff 0%, #dddddd 100%);
  background: -o-linear-gradient(top, #ffffff 0%, #dddddd 100%);
  background: -ms-linear-gradient(top, #ffffff 0%, #dddddd 100%);
  background: linear-gradient(to bottom, #ffffff 0%, #dddddd 100%);
  filter: progid:DXImageTransform.Microsoft.Gradient(StartColorStr='#fff', EndColorStr='#ddd', GradientType=0);
  float: left;
  border: 1px solid #aaa;
  border-right:2px solid @maincolor;
  margin-right: 4px;
}
.actionbar .operations, button.selectfilter, button.text.save[type="button"], button.flipview[type="button"], button.icon.close[type="button"], button.icon.activateselection[type="button"] {
  float: right;
}
.actionbar.is_disabled {
  visibility: hidden;
}

.actionbar select {
  height: 28px;
  padding-top: 4px;
  padding-bottom: 1px;
  margin-right: 20px;
}

.actionbar .spacer
{
  width: 10px;
  display: inline-block;
}

/* #vi_buttons
================================================== */
button[type="button"] {
  border: 1px solid #999;
  color: #222;
  height: 16px;
  padding: 6px 7px 20px;
  margin: 0;
  margin-right: 4px;
  text-align: center;
  background-color: #bbb;
  background: -moz-linear-gradient(top, #dddddd 0%, #bbbbbb 100%);
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #dddddd), color-stop(100%, #bbbbbb));
  background: -webkit-linear-gradient(top, #dddddd 0%, #bbbbbb 100%);
  background: -o-linear-gradient(top, #dddddd 0%, #bbbbbb 100%);
  background: -ms-linear-gradient(top, #dddddd 0%, #bbbbbb 100%);
  background: linear-gradient(to bottom, #dddddd 0%, #bbbbbb 100%);
  filter: progid:DXImageTransform.Microsoft.Gradient(StartColorStr='#ddd', EndColorStr='#bbb', GradientType=0);
  cursor: pointer;
  -webkit-transition: all 0.3s 0.7s ease;
  -moz-transition: all 0.3s 0.7s ease;
  -o-transition: all 0.3s 0.7s ease;
  transition: all 0.3s 0.7s ease;
}
button[type="button"]:hover {
  border: 1px solid #666;
  color: #222;
  letter-spacing: normal;
}
/* Icon Buttons */
button.icon,
.vi_operator .search button,
button.btn_yes,
button.btn_no {
  color: transparent;
  letter-spacing: -1em;
  overflow: hidden;
  min-width: 28px;
}
button.icon:before,
.vi_operator .search button:before,
.btn_yes:before,
.btn_no:before,
.modullist ul .action_add h3:before,
.modullist ul .action_edit h3:before {
  background-image: url(icons/vi_actions_sprite.svg);
  background-repeat: no-repeat;
  width: 16px;
  height: 16px;
  content: ' ';
  position: relative;
  float: left;
  margin-left: -1px;
  margin-top: -1px;
}
/* Action Icons */
button.add:before,
button.new:before,
.action_add h3:before {
  background-position: -16px 0px;
}
button.edit:before,
.action_edit h3:before {
  background-position: -64px 0px;
}
button.clone:before {
  background-position: -32px 0px;
}
button.download:before {
  background-position: -16px -64px;
}
button.invite:before {
  background-position: -80px -32px;
}
button.delete:before {
  background-position: -48px 0px;
}
button.preview:before {
  background-position: -96px 0px;
}
.vi_operator .search button:before,
button.selectfilter:before,
button.search:before {
  background-position: -112px 0px;
}
/* ... */

